--- a/data/htm/2012_2_core_biology.htm
+++ b/data/htm/2012_2_core_biology.htm
@@ -290,7 +290,7 @@
 <td class="pstyle2">화&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-201&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">엄융의&nbsp;</td>
 <td class="pstyle2">160&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -302,7 +302,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">006-103&nbsp;</td>
+<td class="pstyle2">016-214&nbsp;</td>
 <td class="pstyle2">정천기&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
